# repoExample

./: .gitignore  InstallRepoExample.sh  README.md  pyproject.toml
repoExample/: __init__.py
repoExample/classRecord/: __init__.py
repoExample/course/: chinese.py
src/repoExample/: infer.py
src/repoExample/classRecord/: arithmeticAndAncientPoetry.py
src/repoExample/course/: __init__.py  mathematics.py
