[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project]

name = "repoExample"
version = "0.0.0"
description = "python repo代码书写格式."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = []


#[project.scripts]
# 命令 = "包名.模块:函数"
#code-tool = ""
[project.scripts]  # 定义命令行工具
infer = "repoExample.infer:infer"

# 参考链接：https://packaging.python.org/en/latest/overview/


# 指定安装的包为repoExample和README.md
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.exclude-package-data]
mypkg = [".gitattributes", ".gitignore", ".travis.yml", "README.md", "LICENSE", "**.pyc", "__pycache__"]
